# fits_parser

./: CMakeLists.txt  README.md  fits_parser.cpp
source/: card.cpp  fits_parser.cpp  main.cpp
source/headers/: card.hpp  fits_parser.hpp
src/: card.cpp  fits_parser.cpp  main.cpp
src/headers/: fits_parser.hpp
